static/css/styles.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

/* CSS Variables */
:root {
    --primary-font: "Pixelify Sans", sans-serif;
    --secondary-font: "Roboto", sans-serif;
    --primary-color: 	#313a32; /* Dark Green */
    --secondary-color: #363e52; /* Navy Blue */
    --text-color: #2a2a2a; /* Black */
    --accent-color: #FF6F61; /* Coral */
    --background-color: #F2F2F2; /* Mist Grey */
}

/* Global styles */

html {
  scroll-behavior: smooth;
}

html, body {
  height: 100%;
  margin: 0;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    font-family: var(--secondary-font);
    font-size: 1rem;
    color: var(--secondary-color);
    background-color: var(--background-color);
}

main {
  flex: 1;
}

h2 {
    font-family: var(--secondary-font);
    font-weight: 600;
    text-align: center;
    color: var(--primary-color);
    padding: 0 0 40px;
}

a {
  color: #fff;
  text-decoration: none;
}

a:hover {
  color: var(--accent-color);
  text-decoration: underline;
}

/* Navbar styles with dropdown toggle */

.navbar {
    background-color: var(--primary-color);
    min-height: 7vh;
    padding-left: 30px;
    padding-right: 30px;
    box-shadow: 0px 5px 5px rgba(0, 0, 0, .2);
    font-family: var(--primary-font);
    font-size: 24px;
}

.logo {
    align-items: start;
    max-height: 50px;
    padding-right: 5px;
    padding-bottom: 5px;
}

.collapse {
    padding-left: 25px;
}

/* Carousel */

.hero-img {
  object-fit: cover;
  width: 100%;
  min-height: 10vh;
  max-height: 40vh;
}

/* Upload feed */

#discover .container {
  max-height: 300px;
}
.container {
  aspect-ratio: 1/1;
}
.card-body h5 {
  font-weight: 600;
  font-family: var(--primary-font);
}
.card-body p {
  font-family: var(--secondary-font);
}
.card-body img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  max-height: 40vh;
}
.card:hover {
  transform: translateY(-4px);
  transition: 0.2s ease-in-out;
}
.card-img-top {
  object-fit: cover;
  height: 220px;
  width: 100%;
  border-bottom: 1px solid #eaeaea;
}

/* Footer */

#footer {
  text-align: center;
  background-color: var(--primary-color);
  color: #F2F2F2;
}

#footer h5 {
  font-family: var(--primary-font);
  font-size: 2rem;
}

/* ----------------------------
   Standard breakpoint media queries
   ---------------------------- */

